--- a/s23berzkarl/Style.css
+++ b/s23berzkarl/Style.css
@@ -5,8 +5,10 @@
 --white: #fff;
 --bg-light-gray: #ececec;
 --bg-dark-gray: #4c4c4e;
-
---font-heading: 'Grandstander', cursive;
+--font-default: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol";
+--font-heading: 'Roboto', latin;
 
 }
 
@@ -202,11 +204,16 @@ html {
 }
 
 .container {
-		display: block;
-		width: 992px;
-		margin-left: auto ;
-		margin-right: auto ;
-		
+  display: block;
+  width: 992px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0;
+}
+
+nav,
+nav ul {
+  text-align: center;
 }
 
 /* flexbox */
@@ -240,8 +247,8 @@ row-gap: 1rem;
   }
   
   .related-panel img {
-    height: 370px; 
-    width: 720px;
+    height: auto; 
+    width: auto;
     object-fit: cover; 
   }
 table tr:hover td {
