--- a/s23kausandz/style.css
+++ b/s23kausandz/style.css
@@ -198,6 +198,7 @@ table tr:nth-of-type(even) td {
     display: block;
     margin: auto;
     max-width: 650px;
+    border: 0px;
 }
 /* lielie ekrani*/
 @media screen and (min-width: 992px){
