--- a/s23valtoska/style.css
+++ b/s23valtoska/style.css
@@ -7,7 +7,7 @@
     --bg-dark-gray: #4c4c4e;
 
     --font-default: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    font-family: "Ramaraja", sans-serif;
+    --font-family: "Grandstander", cursive;
 }
 
 * {
@@ -231,26 +231,3 @@ table tr:nth-of-type(odd) td {
         color: var(--white);
         
     }
-
-/* pagaidu variants */
-/*
-img {
-    max-width: 100%;
-}
-*/
-
-/*
-// <uniquifier>: Use a unique and descriptive class name
-// <rotation in x>: Use a value from -45 to 45
-// <rotation in y>: Use a value from -45 to 45
-
-.tilt-warp-<uniquifier> {
-  font-family: "Tilt Warp", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
-  font-variation-settings:
-    "XROT" <rotation in x>,
-    "YROT" <rotation in y>;
-}
-*/
